# meow-alpha

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/meow-alpha/backend/callable/: function_callable.hpp  native_callable.hpp
include/meow-alpha/backend/diagnostics/: console_output.hpp  diagnostic.hpp  meow_exceptions.hpp
include/meow-alpha/backend/interface/: callable.hpp  indexable.hpp  iterable.hpp  stringifiable.hpp
include/meow-alpha/backend/module/: module_manager.hpp
include/meow-alpha/backend/native_lib/: native_lib.hpp  standard_lib.hpp
include/meow-alpha/backend/runtime/: environment.hpp  function_arity.hpp  interpreter.hpp  native_fn.hpp  oop.hpp  operator_dispatcher.hpp  overload.hpp  value.hpp
include/meow-alpha/backend/utils/: ansi_colors.hpp  guards.hpp
include/meow-alpha/common/: ast.hpp  source_file.hpp  token.hpp
src/: main.cpp
src/backend/callable/: function_callable.cpp  native_callable.cpp
src/backend/diagnostics/: console_output.cpp  diagnostic.cpp
src/backend/interface/: indexable.cpp  iterable.cpp  stringifiable.cpp
src/backend/module/: module_manager.cpp
src/backend/native_lib/: array_lib.cpp  core_lib.cpp  io_lib.cpp  json_lib.cpp  math_lib.cpp  meta_lib.cpp  native_lib.cpp  object_lib.cpp  random_lib.cpp  string_lib.cpp  system_lib.cpp  time_lib.cpp
src/backend/runtime/: oop.cpp  operator_dispatcher.cpp  value.cpp
src/common/: source_file.cpp
src/frontend/lexer/: lexer.cpp
src/frontend/parser/: expression.cpp  parser.cpp  statement.cpp
tests/: for_loop.meow  hello.meow
(+15 files in other folders)
